# lbp

./: .gitattributes  .gitignore  COPYING  LICENSE  Makefile.am  Makefile.common  README.md  configure.ac
etc/: Makefile.am
etc/m4/: ac_config_cxx_warnings.m4  ac_config_with_package.m4  ac_enable_cxx_dialect.m4  ac_enable_openmp.m4  ac_pkg_config_with.m4  boost.m4  opencv.m4
examples/: Makefile.am  cslbp.cpp  csldp.cpp  cssiltp.cpp  cssiltp2.cpp  elbp.cpp  lbp.cpp  oclbp.cpp  olbp.cpp  options.cpp  options.hpp  run.hpp  scslbp.cpp  siltp.cpp  varlbp.cpp  xcslbp.cpp
include/: Makefile.am
include/lbp/: config.hpp  cslbp.cc  cslbp.hpp  csldp.hpp  cssiltp.hpp  cssiltp2.hpp  defs.hpp  frame_range.hpp  oclbp.hpp  ojala.cc  ojala.hpp  olbp.cc  olbp.hpp  scslbp.hpp  siltp.hpp  utils.hpp  varlbp.hpp  xcslbp.hpp
include/lbp/detail/: neighborhoods.hpp  sampling.hpp
src/: Makefile.am  oclbp.cpp  ojala.cpp  utils.cpp  varlbp.cpp
tests/: Makefile.am  lbp_perf.cpp  placeholder.cpp
tests/perf/: Makefile.am  olbp.cpp
