# -*- mode: makefile -*-

EXTRA_DIST = 

include $(top_srcdir)/Makefile.common

bin_PROGRAMS =                                  \
  cslbp                                         \
  csldp                                         \
  cssiltp                                       \
  cssiltp2                                      \
  elbp                                          \
  oclbp                                         \
  olbp                                          \
  scslbp                                        \
  siltp                                         \
  varlbp                                        \
  xcslbp

cslbp_SOURCES = cslbp.cpp options.cpp
cslbp_LDADD = $(LIBS)

csldp_SOURCES = csldp.cpp options.cpp
csldp_LDADD = $(LIBS)

cssiltp2_SOURCES = cssiltp2.cpp options.cpp
cssiltp2_LDADD = $(LIBS)

cssiltp_SOURCES = cssiltp.cpp options.cpp
cssiltp_LDADD = $(LIBS)

elbp_SOURCES = elbp.cpp options.cpp
elbp_LDADD = $(LIBS)

oclbp_SOURCES = oclbp.cpp options.cpp
oclbp_LDADD = $(LIBS)

olbp_SOURCES = olbp.cpp options.cpp
olbp_LDADD = $(LIBS)

siltp_SOURCES = siltp.cpp options.cpp
siltp_LDADD = $(LIBS)

scslbp_SOURCES = scslbp.cpp options.cpp
scslbp_LDADD = $(LIBS)

varlbp_SOURCES = varlbp.cpp options.cpp
varlbp_LDADD = $(LIBS)

xcslbp_SOURCES = xcslbp.cpp options.cpp
xcslbp_LDADD = $(LIBS)
