## -*- mode: makefile -*-

nobase_include_HEADERS =                        \
  lbp/_config.hpp                               \
  lbp/config.hpp                                \
  lbp/defs.hpp                                  \
  lbp/frame_range.hpp                           \
  lbp/oclbp.hpp                                 \
  lbp/olbp.hpp                                  \
  lbp/olbp.cc                                   \
  lbp/utils.hpp
