## -*- mode: makefile -*-

nobase_include_HEADERS =                        \
  lbp/_config.hpp                               \
  lbp/config.hpp                                \
  lbp/defs.hpp                                  \
  lbp/frame_range.hpp                           \
  lbp/detail/neighborhoods.hpp                  \
  lbp/cslbp.hpp                                 \
  lbp/oclbp.hpp                                 \
  lbp/olbp.cc                                   \
  lbp/olbp.hpp                                  \
  lbp/utils.hpp                                 \
  lbp/varlbp.hpp
