## -*- mode: makefile -*-

nobase_include_HEADERS =                        \
    lbp/_config.hpp                             \
    lbp/config.hpp                              \
    lbp/defs.hpp                                \
    lbp/cslbp.hpp                               \
    lbp/csldp.hpp                               \
    lbp/cssiltp2.hpp                            \
    lbp/detail/neighborhoods.hpp                \
    lbp/detail/sampling.hpp                     \
    lbp/frame_range.hpp                         \
    lbp/oclbp.hpp                               \
    lbp/olbp.cc                                 \
    lbp/olbp.hpp                                \
    lbp/siltp.hpp                               \
    lbp/utils.hpp                               \
    lbp/varlbp.hpp
